maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:14: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to (Int, Int)
  ecritMessage(sorx,sory)
  ^